crates/codegen/language/tests/src/fail/references/unknown_reference/test.stderr
error: Reference to unknown item 'Unknown'.
  --> src/fail/references/unknown_reference/test.rs:18:54
   |
18 |                         field_2 = Required(Terminal([Unknown]))
   |                                                      ^^^^^^^
